# WorkZix

./: README.md
WorkZix/CamTest/: CMakeLists.txt
WorkZix/CamTest/src/: CameraOpr.cpp  CameraOpr.h  CameraPointGreyImpl.cpp  CameraPointGreyImpl.h  main.cpp
WorkZix/IbeoSDK4.5.1/: .gitignore  CMakeLists.txt  ChangeLog  HOWTO.txt  Makefile  Makefile2  ibeosdk.sln  ibeosdk_VS2008.sln  ibeosdk_VS2010.sln  ibeosdk_VS2012.sln
WorkZix/IbeoSDK4.5.1/src/: CMakeLists.txt  Doxyfile  Ibeo_license.txt
WorkZix/IbeoSDK4.5.1/src/demo/: CMakeLists.txt  IbeoSdkCarriageWayList6970Demo.cpp  IbeoSdkDataLoggerDemo.cpp  IbeoSdkEcuLiveDemo.cpp  IbeoSdkFileDemo.cpp  IbeoSdkLaneEvaluationDemo.cpp  IbeoSdkLuxHrLiveDemo.cpp  IbeoSdkLuxLiveDemo.cpp  IbeoSdkMiniLuxLiveDemo.cpp  IbeoSdkPointCloudPlane7510Demo.cpp  IbeoSdkScalaLiveDemo.cpp  IbeoSdkTrackingBoxLiveDemo.cpp  IbeoSdkWriterDemo.cpp  Makefile
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkCarriageWayList6970DemoProject/: IbeoSdkCarriageWayList6970Demo.vcxproj  IbeoSdkCarriageWayList6970Demo_VS2008.vcproj  IbeoSdkCarriageWayList6970Demo_VS2010.vcxproj  IbeoSdkCarriageWayList6970Demo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkEcuLiveDemoProject/: IbeoSdkEcuLiveDemo.vcxproj  IbeoSdkEcuLiveDemo_VS2008.vcproj  IbeoSdkEcuLiveDemo_VS2010.vcxproj  IbeoSdkEcuLiveDemo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkFileDemoProject/: IbeoSdkFileDemo.vcxproj  IbeoSdkFileDemo_VS2010.vcxproj  IbeoSdkFileDemo_VS2012.vcxproj  IbeoSdkFileLiveDemo_VS2008.vcproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkLaneEvaluationDemoProject/: IbeoSdkLaneEvaluationDemo.vcxproj  IbeoSdkLaneEvaluationDemo_VS2008.vcproj  IbeoSdkLaneEvaluationDemo_VS2010.vcxproj  IbeoSdkLaneEvaluationDemo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkLuxHrLiveDemoProject/: IbeoSdkLuxHrLiveDemo.vcxproj  IbeoSdkLuxHrLiveDemo_VS2008.vcproj  IbeoSdkLuxHrLiveDemo_VS2010.vcxproj  IbeoSdkLuxHrLiveDemo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkLuxLiveDemoProject/: IbeoSdkLuxLiveDemo.vcxproj  IbeoSdkLuxLiveDemo_VS2008.vcproj  IbeoSdkLuxLiveDemo_VS2010.vcxproj  IbeoSdkLuxLiveDemo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkMiniLuxLiveDemo/: IbeoSdkMiniLuxLiveDemo.vcxproj  IbeoSdkMiniLuxLiveDemo_VS2008.vcproj  IbeoSdkMiniLuxLiveDemo_VS2010.vcxproj  IbeoSdkMiniLuxLiveDemo_VS2010.vcxproj.filters  IbeoSdkMiniLuxLiveDemo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkPointCloudPlane7510DemoProject/: IbeoSdkPointCloudPlane7510Demo.vcxproj  IbeoSdkPointCloudPlane7510Demo_VS2008.vcproj  IbeoSdkPointCloudPlane7510Demo_VS2010.vcxproj  IbeoSdkPointCloudPlane7510Demo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkScalaLiveDemo/: IbeoSdkScalaLiveDemo.vcxproj  IbeoSdkScalaLiveDemo.vcxproj.filters  IbeoSdkScalaLiveDemo_VS2008.vcproj  IbeoSdkScalaLiveDemo_VS2010.vcxproj  IbeoSdkScalaLiveDemo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkTrackingBoxLiveDemoProject/: IbeoSdkTrackingBoxLiveDemo.vcxproj  IbeoSdkTrackingBoxLiveDemo_VS2008.vcproj  IbeoSdkTrackingBoxLiveDemo_VS2010.vcxproj  IbeoSdkTrackingBoxLiveDemo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/demo/IbeoSdkWriterDemoProject/: IbeoSdkWriterDemo.vcxproj  IbeoSdkWriterDemo_VS2008.vcproj  IbeoSdkWriterDemo_VS2010.vcxproj  IbeoSdkWriterDemo_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/doxygenInput/: sdk_mainpage.dox
WorkZix/IbeoSDK4.5.1/src/ibeosdk/: BoostX86SettingsPropertySheet_VS2010.props  Box2dF.cpp  Box2dF.hpp  CMakeLists.txt  DataTypeId.hpp  LaneType.hpp  Log.cpp  Makefile  Math.hpp  Matrix2dFloat.hpp  Matrix3dFloat.cpp  Matrix3dFloat.hpp  MeasurementKey.hpp  ObjectBasic.hpp  RotationMatrix3dFloat.cpp  RotationMatrix3dFloat.hpp  Time.cpp  Time.hpp  Transform.hpp  TransformationMatrix2dFloat.cpp  ecu.hpp  ibeosdk.vcxproj.filters  ibeosdk_VS2012.vcxproj  ibeosdk_VS2012.vcxproj.filters  io.hpp
WorkZix/IbeoSDK4.5.1/src/ibeosdk/datablocks/: CanMessage.cpp  CarriageWayList6970.cpp  ContentSeparator7100.cpp  DeviceStatus6303.cpp  EventTag.cpp  FrameIndex.cpp  FrameIndex.hpp  MeasurementList2821.cpp  MeasurementList2821.hpp  ObjectListEcuEt.cpp  ObjectListScala2271.cpp  ObjectListScala2271.hpp  OxtsMessage.hpp  OxtsStatus.cpp  PointCloudGlobal7500.cpp  PointCloudPlane7510.cpp  PositionWgs84_2604.cpp  ScalaFpgaRawData2310.cpp  Scan2208.cpp  VehicleStateBasicEcu.cpp  VehicleStateBasicEcu2806.cpp  VehicleStateBasicEcu2808.hpp  VehicleStateBasicLux.cpp
WorkZix/IbeoSDK4.5.1/src/ibeosdk/datablocks/commands/: CommandEcuAppBaseCtrl.cpp  CommandLuxGetParameter.cpp  CommandLuxGetStatus.cpp  CommandLuxSetNtpTimestampSync.cpp  CommandLuxSetParameter.cpp  CommandLuxStopMeasure.cpp  CommandMiniLuxGetParameter.cpp  CommandMiniLuxGetStatus.cpp  CommandMiniLuxReset.cpp  CommandMiniLuxResetToDefaultParameters.cpp  CommandMiniLuxSaveConfig.cpp  CommandMiniLuxStopMeasure.cpp  (+2 more)
WorkZix/IbeoSDK4.5.1/src/ibeosdk/devices/: IbeoDeviceBase.cpp  IbeoDeviceBase.hpp  IbeoEcu.cpp  IbeoMiniLux.cpp  IbeoScala.cpp  IbeoTcpIpDeviceBase.hpp  IbeoTrackingBox.cpp  Makefile
WorkZix/IbeoSDK4.5.1/src/ibeosdk/misc/: StatusCodes.hpp  WinCompatibility.hpp
WorkZix/IbeoSDK4.5.1/src/tools/: CMakeLists.txt  IdcMergerTool.cpp  IdcRepairTool.cpp
WorkZix/IbeoSDK4.5.1/src/tools/IdcMergerToolProject/: IdcMergerTool.vcxproj  IdcMergerTool_VS2008.vcproj  IdcMergerTool_VS2010.vcxproj  IdcMergerTool_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/tools/IdcRepairToolProject/: IdcRepairTool.vcxproj  IdcRepairTool_VS2008.vcproj  IdcRepairTool_VS2010.vcxproj  IdcRepairTool_VS2012.vcxproj
WorkZix/IbeoSDK4.5.1/src/unittests/: CMakeLists.txt  MetaInformationTest7110.cpp  ObjectListScala2271Test.cpp  ObjectScala2271Test.cpp
WorkZix/IbeoSDK4.5.1/src/unittests/common/: ObjectListScala2271TestSupport.cpp  TestSupport.cpp  TestSupport.hpp
(+705 files in other folders)
